controllo del punteggio, validazione tramite classi

--- a/index.html
+++ b/index.html
@@ -33,6 +33,15 @@
         <div id="grid" style="display: none;">
         </div>
 
+        <div id="user-interface">
+
+            <div id="points"></div>
+            
+            <div id="game-over">
+                Game over
+            </div>
+        </div>
+
     </div>
 
     <script src="./js/script.js"></script>
